gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16381.d
version https://git-lfs.github.com/spec/v1
oid sha256:ff0b49e93669425488727eb0d628c9a7edc439e3035d79e324fafccdce23108a
size 280
